tests/type-errors/arith_mult_tez_int.arl
archetype arith_mult_tez_int

entry main () {
  effect {
    var v = 1tz * 1
  }
}
